<resources>
    <string name="app_name">FindFM</string>
    <!--
    <string name="base_url">http://192.168.43.253:8080</string>
    <string name="radio_url">http://192.168.43.253:8081</string>
    -->

    <!--
    <string name="base_url">http://192.168.3.100:8080</string>
    <string name="radio_url">http://192.168.3.100:8081</string>
    -->
    <!--
    <string name="base_url">http://172.23.175.126:8083</string>
    <string name="radio_url">http://172.23.175.126:8084</string>
     -->
    <string name="base_url">http://10.0.2.2:8083</string>
    <string name="radio_url">http://10.0.2.2:8084</string>

    <!--
    <string name="radio_url">http://fs-west.theblast.fast-serv.com:80/blastozoic56ogg.opus</string>
    -->
    <string name="title_activity_registrar">FindFM - Registrar</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="registro">Não possui cadastro? <b><u>Registre-se aqui</u>!</b></string>
    <string name="perderSenha">Esqueceu sua senha? <b><u>Recupere aqui</u>!</b></string>
    <string name="escolha_sua_foto">Escolha sua foto:</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="escolha_tipo_conta">Escolha um tipo de conta</string>
    <string name="banda">Banda</string>
    <string name="musico">Músico</string>
    <string name="contratante">Contratante</string>
    <string name="registrar">Registrar</string>
    <string name="salvar">Salvar</string>
    <string name="error">Error</string>
    <string name="foto_perfil">Foto perfil</string>
    <string name="nome">Nome</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nome_banda">Nome da Banda</string>
    <string name="nome_usuario">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_registrar__musico">Registrar_Musico</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="data_formacao">Data de Formação</string>
    <string name="nivel_habilidade">Nível Habilidade</string>
    <string name="usuario_ou_senha_incorretos">Usuário e/ou Senha incorretos</string>
    <string name="escolha_instrumento">Selecione seus instrumentos e nível de habilidade:</string>
    <string name="suas_informacoes">Preencha suas informações</string>
    <string name="as_informacoes">Preencha as informações</string>
    <string name="banda_informacoes">Preencha as informações da Banda</string>
    <string name="telefone_contato">Telefone para contato</string>
    <string name="numero_integrantes">Nº de Integrantes</string>
    <string name="capacidade_local">Capacidade do local</string>
    <string name="data_inauguracao">Data de Inauguração</string>
    <string name="instrumentos">Instrumentos</string>
    <string name="quantidade">Quantidade</string>
    <string name="simbolo_numero">Nº</string>
    <string name="nome_do_estabelecimento">Nome do Estabelecimento</string>
    <string name="estabelecimento_informacoes">Preencha as informações do Estabelecimento</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string-array name="tipo_post">
        <item>Nenhum</item>
        <item>Anúncio</item>
        <item>Publicação</item>
    </string-array>
    <string-array name="lista_uf">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="title_activity_home__page">FindFM - Home</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="sair">Sair</string>
    <string name="configuracoes">Configurações</string>
    <string name="inicio">Início</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="meus_anuncios">Meus Anúncios</string>
    <string name="notificacoes">Notificações</string>
    <string name="title_activity_perfil_fragment">Perfil_fragment</string>
    <string name="radio_iniciar">Iniciar Rádio</string>
    <string name="radio_carregando">Carregando Rádio</string>
    <string name="radio_tocar">Tocar Rádio</string>
    <string name="radio_pausar">Pausar Rádio</string>
    <string name="instrucao_recuperar_senha">Insira seu e-mail e iremos entrar em contato com você</string>
    <string name="enviar">Enviar</string>
    <string name="continuar">Continuar</string>
    <string name="title_activity_criar_post">Criar Publicação</string>
    <string name="titulo">Adicione um título</string>
    <string name="sua_publicacao">Escreva sua publicação</string>
    <string name="tipo_de_publicacao">Tipo de publicação</string>
</resources>
