<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/meu_perfil"
            android:icon="@drawable/ic_login"
            android:title="@string/meu_perfil" />
        <item
            android:id="@+id/meus_anuncios"
            android:icon="@drawable/ic_anuncios"
            android:title="@string/meus_anuncios" />
        <item
            android:id="@+id/notificacoes"
            android:icon="@drawable/ic_avisos"
            android:title="@string/notificacoes" />
        <item
            android:id="@+id/playRadio"
            android:icon="@drawable/ic_play"
            android:title="@string/radio_iniciar" />
    </group>

    <item android:title="@string/configuracoes" >
        <menu>
            <item
                android:id="@+id/configuracoes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/configuracoes" />
            <item
                android:id="@+id/sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
