<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/from_bg"
    tools:context=".Views.Registrar"
    tools:layout_editor_absoluteY="73dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnRemoverImagem"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_remover"
                android:contentDescription="@string/foto_perfil"
                android:onClick="btnRemoverImagem_Click"
                app:layout_constraintBottom_toTopOf="@+id/txtNomeUsuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/circularImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.147" />

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/circularImageView"
                android:layout_width="130dp"
                android:layout_height="135dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="btnFoto_Click"
                android:src="@drawable/capaplaceholder_photo"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.54"
                app:siBorderColor="@color/white"
                app:siBorderWidth="2dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="180dp"
                android:text="@string/suas_informacoes"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtNomeUsuario"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_login"
                android:ems="10"
                android:hint="@string/nome_usuario"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtTelefone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/txtTelefone"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_phone"
                android:ems="10"
                android:hint="@string/telefone_contato"
                android:inputType="text|phone"
                android:textColor="@color/white"
                android:maxLength="15"
                app:layout_constraintBottom_toTopOf="@+id/txtEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeUsuario" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:maxLength="255"
                app:layout_constraintBottom_toTopOf="@+id/txtSenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:maxLength="20"
                app:layout_constraintBottom_toTopOf="@+id/txtConfirmaSenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

            <EditText
                android:id="@+id/txtConfirmaSenha"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/repita_a_senha"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:maxLength="20"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSenha" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/escolha_tipo_conta"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/grupoTipoConta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtConfirmaSenha"
                app:layout_constraintVertical_bias="0.168" />

            <RadioGroup
                android:id="@+id/grupoTipoConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/rbBanda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="?android:attr/listChoiceIndicatorSingle"
                    android:buttonTint="@color/white"
                    android:text="@string/banda"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rbContratante"
                    tools:layout_editor_absoluteY="400dp" />

                <RadioButton
                    android:id="@+id/rbContratante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="?android:attr/listChoiceIndicatorSingle"
                    android:buttonTint="@color/white"
                    android:text="@string/contratante"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintEnd_toStartOf="@+id/rbBanda"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rbMusico"
                    tools:layout_editor_absoluteY="400dp" />

                <RadioButton
                    android:id="@+id/rbMusico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="?android:attr/listChoiceIndicatorSingle"
                    android:buttonTint="@color/white"
                    android:text="@string/musico"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintEnd_toStartOf="@+id/rbContratante"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="400dp" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:onClick="btnRegistrar_Click"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grupoTipoConta" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>