<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/from_bg"
    tools:context=".Views.RegistrarContratante">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnRemoverImagem"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_remover"
                android:contentDescription="@string/foto_perfil"

                android:onClick="btnRemoverImagem_Click"
                app:layout_constraintBottom_toTopOf="@+id/txtNomeEstabelecimento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/circularImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.122" />

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/circularImageView"
                android:layout_width="130dp"
                android:layout_height="135dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="btnFoto_Click"
                android:src="@drawable/capaplaceholder_photo"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:siBorderColor="@color/white"
                app:siBorderWidth="2dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="180dp"
                android:text="@string/estabelecimento_informacoes"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtNomeEstabelecimento"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_estabelecimento"
                android:ems="10"
                android:hint="@string/nome_do_estabelecimento"
                android:inputType="text"
                android:maxLength="70"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtInauguracao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/txtInauguracao"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_calendar"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/data_inauguracao"
                android:maxLength="10"
                android:onClick="txtInauguracao_Click"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtCapacidadeLocal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeEstabelecimento" />

            <EditText
                android:id="@+id/txtCapacidadeLocal"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_pessoas"
                android:ems="10"
                android:hint="@string/capacidade_local"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInauguracao" />

            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:background="@drawable/btn_bg"
                android:onClick="btnRegistrar_Click"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCapacidadeLocal" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
    
</android.support.constraint.ConstraintLayout>